# atmla

./: CMakeLists.txt  CMakePresets.json  Matrix.cpp  Matrix.h  main.cpp
.cmake/api/v1/reply/: cache-v2-97af6bc7c4990cded2ef.json  cmakeFiles-v1-f1f6aa4c8e12cc91b0c1.json  codemodel-v2-54afd6846aed7c900755.json  index-2024-10-22T17-02-33-0957.json  target-matrix-Debug-b7e08720243d18ad2f9b.json
Header/Matrix/: Matrix.h
Header/Supporting/: Fraction.h  Polynomial.h  Vector_operations.h
Other/: vector_operations.cpp
Readme/: Readme.aux  Readme.fdb_latexmk  Readme.fls  Readme.out  Readme.tex
Source/Matrix/: Constructor.cpp  Constructor.h  Functions.h  Matrix.cpp  Operations.h  Output.h  Scalar_operations.h  Zonal.h
Source/Supporting/Fraction/: Fraction_constructors.cpp  Fraction_constructors.h  Fraction_operators.cpp  Fraction_operators.h
Source/Supporting/Polynomial/: Constructor.h  Operations.h
Source/Supporting/Vector/: Vector_operations.cpp  Vector_operations.h
